syntax = "proto3";
option csharp_namespace = "AtcDemo.Shared";

service AtcRecordService {
    rpc GetAtcRecords (AtcRecordRequest) returns (AtcRecordReply);
}

message AtcRecordRequest {
    int64 modifiedSinceTicks = 1;
    int32 maxCount = 2;
}

message AtcRecordReply {
    repeated AtcChemical chemicals = 1;
    int32 modifiedCount = 2;
}

message AtcChemical {
    int32 id = 1;
    string code = 2;
    int64 modifiedTicks = 3;
    string name = 4;
    string level1AnatomicalMainGroup = 5;
    string level2TherapeuticSubgroup = 6;
    string level3PharmacologicalSubgroup = 7;
    string level4ChemicalSubgroup = 8;
    string level5ChemicalSubstance = 9;
    repeated AtcDose doses = 10;
}

message AtcDose {
    int32 id = 1;
    int32 chemicalId = 2;
    double definedDailyDose = 3;
    string administrationRoute = 4;
}
